--- a/src/com/jellybeanci/MainUI.fxml
+++ b/src/com/jellybeanci/MainUI.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane fx:id="borderPane" prefHeight="1250.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jellybeanci.Controller">
+<BorderPane fx:id="borderPane" prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jellybeanci.Controller">
     <top>
         <HBox alignment="CENTER_LEFT" maxWidth="10000" nodeOrientation="LEFT_TO_RIGHT" prefHeight="40.0" spacing="20.0" BorderPane.alignment="CENTER">
             <opaqueInsets>
@@ -17,9 +17,9 @@
             <padding>
                 <Insets left="3.0" right="3.0" />
             </padding>
-            <Label text="File Path or XML url" />
+            <Label text="Dataset URL:" />
             <TextField fx:id="textBox" maxWidth="10000" prefHeight="1.0" HBox.hgrow="ALWAYS" />
-            <Button fx:id="btnGetData" mnemonicParsing="false" onMouseClicked="#onGetDataClick" text="Fetch" />
+            <Button fx:id="btnGetData" mnemonicParsing="false" onMouseClicked="#onGetDataClick" text="Get Data" />
         </HBox>
     </top>
     <padding>
@@ -49,7 +49,7 @@
                             <padding>
                                 <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                             </padding>
-                            <LineChart fx:id="lineChart" axisSortingPolicy="NONE" maxWidth="100000" prefHeight="428.0" prefWidth="684.0" title="Total Cases" HBox.hgrow="ALWAYS">
+                            <LineChart fx:id="lineChart" axisSortingPolicy="NONE" horizontalGridLinesVisible="false" maxWidth="100000" prefHeight="428.0" prefWidth="684.0" title="Total Cases" HBox.hgrow="ALWAYS">
                                 <xAxis>
                                     <CategoryAxis animated="false" prefWidth="595.0" fx:id="x">
                                         <prefHeight>70.0</prefHeight>
@@ -75,6 +75,39 @@
                         </HBox>
                     </AnchorPane>
                 </Tab>
+                <Tab text="Area Chart">
+                    <AnchorPane prefWidth="721.0">
+                        <HBox spacing="5.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="3.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="15.0">
+                            <padding>
+                                <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                            </padding>
+                            <AreaChart fx:id="areaChart" horizontalGridLinesVisible="false" maxWidth="100000" prefHeight="428.0" prefWidth="684.0" title="Total Cases" HBox.hgrow="ALWAYS">
+                                <xAxis>
+                                    <CategoryAxis animated="false" prefWidth="595.0" fx:id="x2">
+                                        <prefHeight>70.0</prefHeight>
+                                    </CategoryAxis>
+                                </xAxis>
+                                <yAxis>
+                                    <NumberAxis fx:id="y2" side="LEFT" />
+                                </yAxis>
+                                <opaqueInsets>
+                                    <Insets />
+                                </opaqueInsets>
+                            </AreaChart>
+                            <VBox alignment="TOP_CENTER" maxWidth="120.0" spacing="5.0" HBox.hgrow="NEVER">
+                                <ListView fx:id="countryListView2" maxWidth="1.7976931348623157E308" minWidth="75.0" VBox.vgrow="ALWAYS" />
+                                <Button fx:id="btnShow2" mnemonicParsing="false" onMouseClicked="#getSelectedCountries2" prefHeight="25.0" prefWidth="60.0" text="Show" />
+                                <HBox.margin>
+                                    <Insets />
+                                </HBox.margin>
+                                <padding>
+                                    <Insets bottom="5.0" />
+                                </padding>
+                            </VBox>
+                        </HBox>
+                    </AnchorPane>
+                </Tab>
+
             </TabPane>
             <BorderPane.margin>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
